# Immidock

./: CHANGELOG.md  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
dockshifter/: __init__.py  version.py
dockshifter/adapters/: one_panel.py
dockshifter/cli/: main.py
dockshifter/core/: auditor.py  bundler.py  image_mgr.py  incremental.py  network_mgr.py  remote.py  restorer.py
dockshifter/utils/: checksum.py  i18n.py  logger.py
docs/: architecture.md  faq.md  quickstart.md  tutorial.md
immidock/: __init__.py
immidock/adapters/: one_panel.py
immidock/cli/: main.py
immidock/core/: auditor.py  bundler.py  incremental.py  network_mgr.py  remote.py  restorer.py
immidock/schemas/: manifest_schema.json
immidock/utils/: i18n.py  logfile.py  logger.py  system.py
scripts/: build_binary.sh
